# ML-2024-56

./: .gitignore  Dockerfile  README.md  compile.py  custom_model.py  dataset.csv  docker-compose.yml  gen_bc.sh  gen_llvm.sh  gridsearch_graph.py  master_script.sh  output.csv  pca.py  run.sh  setup.sh  test.py  test_keras.py
core/: compile.py  config.py  custom_model.py  evolution-master.py  evolutionShapes.py  gen_bc.sh  gen_llvm.sh  neural_net.py  pca.py  plotmaker.py  test.py
core/evolution/: evolution_master.py  evolution_shapes.py  final_assesser.py  performance_combiner.py  plotmaker.py  validation_assesser.py
core/llvm_passes/: CMakeLists.txt  create_dataset.py
core/llvm_passes/feat-extr/: CMakeLists.txt
core/main/: config.py
core/other/: custom_model.py
core/test/: sources.txt
core/test/AoC/: arnokamphuis-2015-1.cpp  arnokamphuis-2015-12.cpp  arnokamphuis-2015-13.cpp  arnokamphuis-2015-23.cpp  arnokamphuis-2017-16.cpp  arnokamphuis-2018-10.cpp  arnokamphuis-2018-15.cpp  arnokamphuis-2018-16.cpp  arnokamphuis-2018-18.cpp  arnokamphuis-2018-19.cpp  arnokamphuis-2018-2.cpp  arnokamphuis-2018-22.cpp  arnokamphuis-2018-23.cpp  arnokamphuis-2018-3.cpp  arnokamphuis-2018-6.cpp  arnokamphuis-2018-9.cpp  janiorca_2023_1.c  krokerik_2016_10.c  krokerik_2016_11.c  krokerik_2016_12.c  krokerik_2016_13.c  krokerik_2016_15.c  krokerik_2016_7.c  krokerik_2016_8.c  krokerik_2016_9.c  krokerik_2017_2.c  krokerik_2017_3.c  (+22 more)
llvm-passes/: 2mm.ll  CMakeLists.txt  create_dataset.py  dev-test.sh
llvm-passes/feat-extr/: CMakeLists.txt  feat-extr.cpp  floyd-warshall.ll
(+76 files in other folders)
